Ui warning modals for AWS migration

--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -16,3 +16,5 @@ STORAGE_API_BASEURL=
 CODESPACE_SECURITY_APP_ID=
 CODESPACE_TUTORIALS_BASE_URL=
 CODESPACE_RECIEPES_ENABLE_README=
+SHOW_AWS_MIGRATION_WARNING=
+AWS_MIGRATION_WARNING_MODAL_CONTENT=
