--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -16,3 +16,5 @@ STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL}
 CODESPACE_SECURITY_APP_ID=${PROJECTSMO_CODESPACE_SECURITY_APP_ID}
 CODESPACE_TUTORIALS_BASE_URL=${PROJECTSMO_CODESPACE_TUTORIALS_BASE_URL}
 CODESPACE_RECIEPES_ENABLE_README=${PROJECTSMO_CODESPACE_RECIEPES_ENABLE_README}
+SHOW_AWS_MIGRATION_WARNING=${PROJECTSMO_SHOW_AWS_MIGRATION_WARNING}
+AWS_MIGRATION_WARNING_MODAL_CONTENT=${PROJECTSMO_AWS_MIGRATION_WARNING_MODAL_CONTENT}
