--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -60,8 +60,8 @@ codeserver:
   userauth: ${CODESERVER_USERAUTH:XXXX}
     
 authenticator:
-  uri: ${AUTHENTICATOR_URI:http://authenticator-service.kong.svc.cluster.local:80} 
-  uri.aws: ${AUTHENTICATOR_URI_AWS:YOUR_AUTHENTICATOR_URI} 
+  uri: ${AUTHENTICATOR_URI:YOUR_AUTHENTICATOR_URI} 
+  uri.aws: ${AUTHENTICATOR_URI_AWS:YOUR_AUTHENTICATOR_URI_AWS} 
 
  
 kafka:
