--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -18,3 +18,4 @@ CODESPACE_TUTORIALS_BASE_URL=${PROJECTSMO_CODESPACE_TUTORIALS_BASE_URL}
 CODESPACE_RECIEPES_ENABLE_README=${PROJECTSMO_CODESPACE_RECIEPES_ENABLE_README}
 SHOW_AWS_MIGRATION_WARNING=${PROJECTSMO_SHOW_AWS_MIGRATION_WARNING}
 AWS_MIGRATION_WARNING_MODAL_CONTENT=${PROJECTSMO_AWS_MIGRATION_WARNING_MODAL_CONTENT}
+AWS_PROGRESS_API_URL=${PROJECTSMO_AWS_PROGRESS_API_URL}
