--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -18,3 +18,4 @@ CODESPACE_TUTORIALS_BASE_URL=
 CODESPACE_RECIEPES_ENABLE_README=
 SHOW_AWS_MIGRATION_WARNING=
 AWS_MIGRATION_WARNING_MODAL_CONTENT=
+AWS_PROGRESS_API_URL=
