--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1319,6 +1319,8 @@ definitions:
         type: string
       isSecuredWithCookie :
         type: boolean
+      repo :
+        type: string
 
 
            
