--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -19,3 +19,6 @@ CODESPACE_RECIEPES_ENABLE_README=${PROJECTSMO_CODESPACE_RECIEPES_ENABLE_README}
 SHOW_AWS_MIGRATION_WARNING=${PROJECTSMO_SHOW_AWS_MIGRATION_WARNING}
 AWS_MIGRATION_WARNING_MODAL_CONTENT=${PROJECTSMO_AWS_MIGRATION_WARNING_MODAL_CONTENT}
 AWS_PROGRESS_API_URL=${PROJECTSMO_AWS_PROGRESS_API_URL}
+SHOW_ON_PREM_START=${PROJECTSMO_SHOW_ON_PREM_START}
+CODESPACE_AWS_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_AWS_OPENSEARCH_BUILD_LOGS_URL}
+CODESPACE_AWS_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_AWS_OPENSEARCH_LOGS_URL}
