--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -19,3 +19,6 @@ CODESPACE_RECIEPES_ENABLE_README=
 SHOW_AWS_MIGRATION_WARNING=
 AWS_MIGRATION_WARNING_MODAL_CONTENT=
 AWS_PROGRESS_API_URL=
+SHOW_ON_PREM_START=
+CODESPACE_AWS_OPENSEARCH_BUILD_LOGS_URL=
+CODESPACE_AWS_OPENSEARCH_LOGS_URL=
