--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceBuildDeploy.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceBuildDeploy.yaml
@@ -112,6 +112,8 @@ definitions:
       comment:
         type: string
         description: "Comment for Build managment"
+      buildDeployedBy:
+        $ref: "#/definitions/UserInfoVO"
 
   buildResponseVo:
     type: object
