hotfix-private-recipe-deploy

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1306,6 +1306,8 @@ definitions:
         type: string
       clientSecret:
         type: string
+      repo:
+        type: string
 
 
            
