added regex for id

--- a/packages/fabric-backend/lib/src/main/resources/api/fabricWorkspaces.yaml
+++ b/packages/fabric-backend/lib/src/main/resources/api/fabricWorkspaces.yaml
@@ -789,6 +789,7 @@ definitions:
         properties:
           roleName:
             type: string
+            pattern: "^[A-Z0-9]+[A-Z0-9._-]{1,60}$"
 
 
     
