aws-authenticator-migration

--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -62,6 +62,8 @@ codeserver:
 authenticator:
   uri: ${AUTHENTICATOR_URI:YOUR_AUTHENTICATOR_URI} 
   uri.aws: ${AUTHENTICATOR_URI_AWS:YOUR_AUTHENTICATOR_URI_AWS} 
+  api.key: ${AUTHENTICATOR_API_KEY:API_KEY}
+  api.aws.key: ${AUTHENTICATOR_API_KEY_AWS:YOUR_AWS_API_KEY}
 
  
 kafka:
