--- a/packages/chronos/chronos-lib/src/main/resources/application.yml
+++ b/packages/chronos/chronos-lib/src/main/resources/application.yml
@@ -34,6 +34,10 @@ spring:
        enabled: true  
       ssl:
         enabled: false
+        trust:
+          store:
+            path: ${CA_TRUSTSTORE_PATH:/XXXX/XXXX/truststore.p12}
+            password: ${CA_TRUSTSTORE_PASSWORD:XXXX}
     stream:
       function:
         bindings:
