added changes for showing resouraceusage for code space

--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -15,3 +15,4 @@ STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL}
 CODESPACE_SECURITY_APP_ID=${PROJECTSMO_CODESPACE_SECURITY_APP_ID}
 CODESPACE_TUTORIALS_BASE_URL=${PROJECTSMO_CODESPACE_TUTORIALS_BASE_URL}
 CODESPACE_RECIEPES_ENABLE_README=${PROJECTSMO_CODESPACE_RECIEPES_ENABLE_README}
+MONITORING_DASHBOARD_BASE_URL=${PROJECTSMO_MONITORING_DASHBOARD_BASE_URL}
