--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -15,3 +15,4 @@ STORAGE_API_BASEURL=
 CODESPACE_SECURITY_APP_ID=
 CODESPACE_TUTORIALS_BASE_URL=
 CODESPACE_RECIEPES_ENABLE_README=
+MONITORING_DASHBOARD_BASE_URL=
